--- a/src/components/Columns.scss
+++ b/src/components/Columns.scss
@@ -8,3 +8,16 @@
 .reviewer-vote-item {
   margin: 5px;
 }
+
+
+.pill-draft.outlined {
+  background-color: transparent;
+  border-color: rgb(152, 198, 255);
+  color: rgb(152, 198, 255);
+}
+
+.pill-conflicts.outlined {
+  background-color: transparent;
+  border-color: rgb(241, 112, 123);
+  color: rgb(241, 112, 123);
+}
