--- a/src/components/Columns.scss
+++ b/src/components/Columns.scss
@@ -21,3 +21,12 @@
   border-color: rgb(241, 112, 123);
   color: rgb(241, 112, 123);
 }
+
+.title-column-subdetails {
+  margin-left: 5px;
+  text-align: center;
+}
+
+.icon-column-subdetails {
+  padding-top: 5px;
+}
