Fixing async calls for additional commit details

--- a/src/components/Columns.scss
+++ b/src/components/Columns.scss
@@ -23,10 +23,11 @@
 }
 
 .title-column-subdetails {
-  margin-left: 5px;
   text-align: center;
 }
 
 .icon-column-subdetails {
-  padding-top: 5px;
+  padding-top: 6px;
+  padding-left: 6px;
+  margin-left: 5px;
 }
