--- a/src/components/Columns.scss
+++ b/src/components/Columns.scss
@@ -26,6 +26,18 @@
   color: rgb(241, 112, 123);
 }
 
+.pill-requiredred.outlined {
+  background-color: transparent;
+  border-color: rgb(241, 112, 123);
+  color: rgb(241, 112, 123);
+}
+
+.pill-required.outlined {
+  background-color: transparent;
+  border-color: rgb(146, 144, 144);
+  color: rgb(146, 144, 144);
+}
+
 .pill-autocomplete.outlined {
   background-color: transparent;
   border-color: rgb(221, 149, 14);
@@ -40,4 +52,39 @@
   padding-top: 6px;
   padding-left: 6px;
   margin-left: 5px;
+}
+
+.icon-red{
+  color: red;
+  font-size: x-large;
+  font-weight: bold;
+
+}
+.icon-green{
+  color: green;
+  font-size: x-large;
+  font-weight: bold;
+}
+
+.icon-policy-red{
+  color: rgb(233, 0, 0);
+}
+
+.icon-policy-green{
+  color: rgb(1, 165, 1);
+}
+
+.span-tooltip{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 12px;
+  font-weight: normal;
+  white-space: normal;
+}
+
+.td-vertical-align{
+  vertical-align: top;
+}
+
+.table-border-spacing{
+  border-spacing: 0px;
 }
