Adding support for automatically saving filters

--- a/src/tabs/PullRequestTab.scss
+++ b/src/tabs/PullRequestTab.scss
@@ -1,1 +1,5 @@
 @import "azure-devops-ui/Core/_platformCommon.scss";
+
+.clear-filter-button.bolt-icon-button.enabled.primary {
+  background-color: #a4262c;
+}
