Implementing the save/clear filter state

--- a/src/tabs/PullRequestTab.scss
+++ b/src/tabs/PullRequestTab.scss
@@ -3,3 +3,7 @@
 .clear-filter-button.bolt-icon-button.enabled.primary {
   background-color: #a4262c;
 }
+
+.save-filter-button.bolt-icon-button.enabled.primary {
+  background-color: rgba(16, 124, 16, 1);
+}
