--- a/src/tabs/PullRequestTab.scss
+++ b/src/tabs/PullRequestTab.scss
@@ -1,1 +1,9 @@
 @import "azure-devops-ui/Core/_platformCommon.scss";
+
+.clear-filter-button.bolt-icon-button.enabled.primary {
+  background-color: #a4262c;
+}
+
+.save-filter-button.bolt-icon-button.enabled.primary {
+  background-color: rgba(16, 124, 16, 1);
+}
