--- a/src/components/Columns.scss
+++ b/src/components/Columns.scss
@@ -92,6 +92,7 @@
 
 .repos-pr-reviewer-vote-approvedWithSuggestionsLightColor img {
   border-color: rgb(88,162,101);
+  border-style: dotted;
 }
 
 .repos-pr-reviewer-vote-approvedWithSuggestionsLightColor img {
