UI Tweaks and new icons for new changes notification

--- a/src/components/Columns.scss
+++ b/src/components/Columns.scss
@@ -110,3 +110,7 @@
 .repos-pr-reviewer-vote-rejectedLightColor img {
   border-color: rgb(203,75,73);
 }
+
+.bolt-pill.hideText > div {
+  display: none;
+}
